# o-auth-backend

./: .env  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 876c4c5f159f_make_provider_column_non_nullable_with_.py  88c483143439_clean_up_database_schema_to_match_user_.py  a426b0937db8_create_users_table.py  d87288c759bc_initial_migration.py  fb711332d4d2_add_provider_column_and_make_password_.py
app/: database.py
app/models/: user.py
app/routers/: auth.py  user.py
app/schemas/: auth.py  error.py  user.py
app/utils/: jwt.py
